base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: node-red
    meta.helm.sh/release-namespace: node-red
  name: node-red
