base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
    app: node-red
  annotations:
    meta.helm.sh/release-name: node-red
    meta.helm.sh/release-namespace: node-red
  name: node-red-svc
  namespace: node-red
spec:
  ##externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 1880
    protocol: TCP
    targetPort: 1880
  selector:
    app: node-red
  sessionAffinity: None
  type: ClusterIP
